seamless iframes don't take border into account properly and make the iframe too small. https://bugs.webkit.org/show_bug.cgi?id=90827

Reviewed by Ojan Vafai.

Source/WebCore:

Seamless IFrames were incorrectly calculating their width; borders and
padding of the child document were accidentally left out of the end
result. This tiny patch adds the border/padding width to the calculated
width for the seamless IFrame, bringing things back into line with
expectations.

Test: fast/frames/seamless/seamless-border-padding.html

* rendering/RenderIFrame.cpp:
(WebCore::RenderIFrame::minPreferredLogicalWidth):
(WebCore::RenderIFrame::maxPreferredLogicalWidth):
    Add borderAndPaddingLogicalWidth() to the result of both methods.

LayoutTests:

* fast/frames/seamless/seamless-border-padding-expected.txt: Added.
* fast/frames/seamless/seamless-border-padding.html: Added.
    This test checks the IFrame's handling of borders and padding.
    Things work correctly for width after this patch, but there are
    still issues with padding and height, which will be fixed in
    http://wkbug.com/106167


Canonical link: https://commits.webkit.org/124374@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@138904 268f45cc-cd09-0410-ab3c-d52691b4dbfc